--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+This is an implementation Maekawa Algorithm for mutual exclusion for xv6.
+
+
+Original xv6 README is as follows:
+
+----------------------------------------------------------------------
+
 xv6 is a re-implementation of Dennis Ritchie's and Ken Thompson's Unix
 Version 6 (v6).  xv6 loosely follows the structure and style of v6,
 but is implemented for a modern x86-based multiprocessor using ANSI C.
