--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-This is an implementation Maekawa Algorithm for mutual exclusion for xv6.
+This is an implementation Maekawa Algorithm for mutual exclusion for xv6
+using multicast inter-process communication(IPC).
 
 
 Original xv6 README is as follows:
